@@ -1,5 +1,6 @@
 0.02
  - Add EXAMPLE2 section to doc.
+ - Update Module::Install to 1.14 version.
 
 0.01 2014-08-23T15:00:01+02:00
  - First version.
